--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   ],
   "scripts": {
     "build": "tsc",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -21,11 +24,13 @@
   },
   "devDependencies": {
     "@types/estree": "^1.0.7",
-    "@types/node": "^18.0.0",
+    "@types/node": "^24.10.1",
+    "@vitest/ui": "^3.2.4",
     "typescript": "^5.0.0",
-    "vite": "^4.0.0"
+    "vite": "^7.2.4",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "vite": "^4.0.0 || ^5.0.0"
+    "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   }
 }
