--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "esModuleInterop": true,
     "declaration": true,
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.ts", "node_modules"]
 }
