--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-drupal-t",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A Vite plugin that automatically extracts Drupal.t() and Drupal.formatPlural() translation calls for seamless internationalization",
   "author": "Märt Rang <rang501@gmail.com>",
   "license": "MIT",
@@ -16,6 +16,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
+    "src",
     "README.md",
     "LICENSE"
   ],
