--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "formatPlural"
   ],
   "dependencies": {
-    "@rollup/pluginutils": "^4.2.1"
+    "@rollup/pluginutils": "^4.2.1",
+    "ts-for-drupal-core": "^0.0.7"
   },
   "devDependencies": {
     "@types/estree": "^1.0.7",
